objects/Milestone1_Task__c.object
<CustomObject>
    <description>RIC Plann&apos;R - Workflow OPP &amp; Produits finis</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigné à</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_Reason__c</fullName>
        <inlineHelpText>If blocked, why?</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this task blocked for some reason?</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>Classify this task as appropriate for your use.</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Réalisée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Late_Formula__c</fullName>
        <description>Retard = aujourdhui - échéance, ou date de réalisation - échéance si date de réalisation non vide</description>
        <formula>IF(ISBLANK(RIC_Date_Realisation__c),Today(),RIC_Date_Realisation__c) -  Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retard (jrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Late__c</fullName>
        <inlineHelpText>How many days late is this task?</inlineHelpText>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Date d&apos;échéance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_GUID__c</fullName>
        <description>This field is used to track Email for a reply to email chain.</description>
        <externalId>true</externalId>
        <label>Email GUID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense__c</fullName>
        <inlineHelpText>The estimated amount of expenses which will be incurred during the task.</inlineHelpText>
        <label>Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <inlineHelpText>The estimated time to complete the task.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index_Helper__c</fullName>
        <formula>Assigned_To__r.FirstName &amp; &apos; &apos; &amp; Assigned_To__r.LastName &amp; &apos; &apos; &amp; Project_Milestone__r.Project__r.Name &amp; &apos; &apos; &amp; Project_Milestone__r.Name &amp; &apos; complete:&apos; &amp; IF(Complete__c, &apos;yes&apos;, &apos;no&apos;) &amp; &apos; &apos; &amp; Name</formula>
        <label>Index Helper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <externalId>true</externalId>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <description>Date Time the last email was sent to this task.</description>
        <inlineHelpText>The date the last email was attached to this task. A task can be created via an email, and additional emails can be attached to the task in the notes section.</inlineHelpText>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Milestone_Grandparent__c</fullName>
        <formula>if (
 Project_Milestone__r.Parent_Milestone__c != null, 
 Project_Milestone__r.Parent_Milestone__r.Name , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Grandparent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>if ( Complete__c == true, &apos;Complete&apos;,
  if ( and( Days_Late_Formula__c &gt; 0,  Blocked__c  ),
    if(Len( Text(Task_Stage__c))&gt;0 , &apos;Late &amp; Blocked &apos; &amp; Text(Task_Stage__c), &apos;Late &amp; Blocked&apos;),
    if (Days_Late_Formula__c &gt; 0,  
      if(Len( Text(Task_Stage__c))&gt;0, &apos;Late &apos; &amp; text(Task_Stage__c), &apos;Late&apos;),
      if(Blocked__c == true, 
        if(Len( Text(Task_Stage__c))&gt;0, &apos;Blocked &apos; &amp; text(Task_Stage__c), &apos;Blocked&apos;), 
        if(Len( Text(Task_Stage__c))&gt;0, &apos;Open &apos; &amp; Text(Task_Stage__c), &apos;Open&apos;) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field indicating if the task is complete, open, late, blocked or late and blocked.</inlineHelpText>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <formula>ENCODED:{!ID:00ND0000006HO80.Owner}</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task_Import_Id__c</fullName>
        <label>Predecessor_Task_Import_Id__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The predecessor task for this task if applicable.</inlineHelpText>
        <label>Predecessor Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Milestone1_Task__c.Project_Milestone__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project_Milestone__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipName>Successor_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>This is the priority of the task. 0,1,2,3 or 4.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <formula>Project_Milestone__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <formula>TEXT(Project_Milestone__r.Project__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <label>Phase</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_320,FIND( &apos;/services&apos;, $Api.Partner_Server_URL_320)) &amp; &quot;/&quot; &amp; Project_Milestone__r.Project__c, Project_Milestone__r.Project__r.Name, Project_Milestone__r.Project__r.Name)</formula>
        <label>Projet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Assigned_to_me__c</fullName>
        <formula>$User.Id = Assigned_To__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignée à moi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Coordinateur__c</fullName>
        <formula>Project_Milestone__r.Project__r.RIC_Coordinateur__r.FirstName +&apos; &apos;+ Project_Milestone__r.Project__r.RIC_Coordinateur__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordinateur Projet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Date_MAD_previ__c</fullName>
        <formula>Project_Milestone__r.Project__r.RIC_Date_MAD_previ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de MAD prévisionnelle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Date_Realisation__c</fullName>
        <description>Alimenté par workflow rule quand le Statut passe à Réalisé</description>
        <label>Date de réalisation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Echeance_depasse__c</fullName>
        <formula>Today() - Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Echeance depasse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Env_URL_Prefix__c</fullName>
        <formula>$Label.RIC_Environment_URL_prefix</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Env_URL_Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_IsCoordinator__c</fullName>
        <description>Pour règle de validation sur Action</description>
        <formula>$User.Id =  Project_Milestone__r.Project__r.RIC_Coordinateur__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Je suis coordinateur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_IsOPP_Project__c</fullName>
        <formula>CONTAINS(Project_Milestone__r.Project__r.RecordType.DeveloperName,&quot;OPP&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est un projet OPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_IsPickVal__c</fullName>
        <description>To be used in Diffuser Actions Trigger so that it updates Actions that have this value as True</description>
        <formula>IF(OR( IF( ISPICKVAL(RIC_Status__c, &apos;Non diffusé&apos;) , true , false ), IF( ISPICKVAL(RIC_Status__c, &apos;En Cours&apos;) , true , false )), &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RIC_IsPickVal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Late__c</fullName>
        <label>Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Link_To_Task__c</fullName>
        <description>Workflow OPP &amp; Produits finis - Used in Visualforce Email Template to be sent weekly to users with late tasks. This Formula creates a clickable link to the Task</description>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_320,FIND( &apos;/services&apos;, $Api.Partner_Server_URL_320)) &amp; &quot;/&quot; &amp; Id, Name, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RIC_Link_To_Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_MAD_reelle__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Lorsque cette case est cochée, l&apos;Action ne peut être marquée Réalisée que lorsque la MAD réelle est renseignée dans le Projet</inlineHelpText>
        <label>MAD réelle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Marque__c</fullName>
        <formula>Project_Milestone__r.Project__r.RIC_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marque</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Nom_du_projet__c</fullName>
        <description>Champ non cliquable, pour utilisation dans email template</description>
        <formula>Project_Milestone__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nom du projet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Notifier_RCTA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Envoie une notification par email au RCTA lorsque l&apos;Action est réalisée</inlineHelpText>
        <label>Notifier RCTA à la réalisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Phase_Value__c</fullName>
        <description>Name of the Milestone. Used in email template.</description>
        <formula>Project_Milestone__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RIC_Phase_Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Projet_Num__c</fullName>
        <description>Utilisé dans les emails templates</description>
        <formula>Project_Milestone__r.Project__r.RIC_Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projet N°</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_ReEvaluate_WorkFlow_Value__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Used in a workflow to differentiate between a Task created via import and a Task created through point and click</description>
        <label>RIC_ReEvaluate_WorkFlow_Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Retard_Image__c</fullName>
        <formula>IMAGE(
IF(Days_Late_Formula__c &lt;= 0,
&quot;/img/samples/flag_green.gif&quot;,
&quot;/img/samples/flag_red.gif&quot;),
&quot;Indicateur de retard&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Status__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non diffusé</fullName>
                    <default>true</default>
                    <label>Non diffusé</label>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Réalisé</fullName>
                </value>
                <value>
                    <fullName>Réalisé - à finaliser</fullName>
                </value>
                <value>
                    <fullName>Annulé</fullName>
                </value>
                <value>
                    <fullName>Non réalisé</fullName>
                </value>
                <value>
                    <fullName>Non significatif</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Statut_du_projet__c</fullName>
        <formula>TEXT(Project_Milestone__r.Project__r.RIC_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statut du projet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_TECH_isLateTask__c</fullName>
        <formula>AND(OR(ISPICKVAL(RIC_Status__c, &apos;Réalisé&apos;),ISPICKVAL(RIC_Status__c, &apos;Réalisé - à finaliser&apos;)),  Due_Date__c &gt;= Today())</formula>
        <label>TECH_isLateTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIC_Task_Duration_Formula__c</fullName>
        <description>A formula that calculates the duration in days of a Task (Action)</description>
        <formula>CEILING( Due_Date__c  -  Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RIC_Task_Duration_Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Task_Duration_Value__c</fullName>
        <description>Field will be updated via a Workflow and will be used when Exporting XML&apos;s.
This is also the field that will be used to update the dates of a Task when importing an XML</description>
        <label>RIC_Task_Duration_Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Task_Sent__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Task Sent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Task_Start_Diff_Formula__c</fullName>
        <description>A formula field that calculates the number of days between the start of a Task and the start of the corresponding Milestone.</description>
        <formula>CEILING( Start_Date__c  -  Project_Milestone__r.Kickoff__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RIC_Task_Start_Diff_Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Task_Start_Diff_Value__c</fullName>
        <description>Field will be updated via a Workflow from field &quot;RIC_Task_Start_Diff_Formula&quot; and will be used when Exporting XML&apos;s.
This is also the field that will be used to update the dates of a Milestone when importing an XML</description>
        <label>RIC_Task_Start_Diff_Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Type_Action__c</fullName>
        <label>Type d&apos;Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avec Notification</fullName>
                    <default>true</default>
                    <label>Avec Notification</label>
                </value>
                <value>
                    <fullName>Sans Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_notif_coord__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Notifier le coordinateur du Projet lorsque cette Action n&apos;est pas Réalisée à la date de l&apos;échéance</inlineHelpText>
        <label>Notifier le coordinateur si retard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_ID__c</fullName>
        <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
        <label>Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date de début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_du_projet__c</fullName>
        <formula>TEXT(Project_Milestone__r.Project__r.RIC_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status du projet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
        <label>Task Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Task_Stage__c</fullName>
        <inlineHelpText>Where is this task on the road to completion?</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RIC Action</label>
    <listViews>
        <fullName>RIC_Actions_4_months</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Days_Late_Formula__c</columns>
        <columns>Due_Date__c</columns>
        <columns>RIC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:120</value>
        </filters>
        <filters>
            <field>Days_Late_Formula__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Actions à réaliser dans les 4 mois</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_Actions_60_days</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Days_Late_Formula__c</columns>
        <columns>Due_Date__c</columns>
        <columns>RIC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:60</value>
        </filters>
        <filters>
            <field>Days_Late_Formula__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Actions à réaliser dans les 60 jours</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_Actions_en_retard</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Days_Late_Formula__c</columns>
        <columns>Due_Date__c</columns>
        <columns>RIC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Late_Formula__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Actions en retard</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>RIC_Date_Realisation__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>Toutes les Actions</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_Mes_actions</fullName>
        <columns>Project__c</columns>
        <columns>Status_du_projet__c</columns>
        <columns>RIC_Coordinateur__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Assigned_to_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mes actions</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_Mes_actions_en_retard</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Days_Late_Formula__c</columns>
        <columns>Due_Date__c</columns>
        <columns>RIC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Late_Formula__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>En cours</value>
        </filters>
        <filters>
            <field>RIC_Assigned_to_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mes actions en retard</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_Mes_actions_todo</fullName>
        <columns>Project__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>RIC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>En cours,Réalisé - à finaliser</value>
        </filters>
        <filters>
            <field>RIC_Assigned_to_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mes actions non réalisées ou à finaliser</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_MyActions_30days</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Days_Late_Formula__c</columns>
        <columns>Due_Date__c</columns>
        <columns>RIC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>En cours</value>
        </filters>
        <filters>
            <field>RIC_Assigned_to_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mes actions des 30 prochains jours</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_MyActions_90days</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Days_Late_Formula__c</columns>
        <columns>Due_Date__c</columns>
        <columns>RIC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:90</value>
        </filters>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>En cours</value>
        </filters>
        <filters>
            <field>RIC_Assigned_to_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mes actions des 90 prochains jours</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Nom de l&apos;action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RIC Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Milestone1_Start_Date_More_Than_Due_Date</fullName>
        <active>false</active>
        <errorConditionFormula>if (and(!isblank(Start_Date__c), !isblank(Due_Date__c)), true, false)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>La date d&apos;échéance doit être postérieure à la date de début</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RIC_EditStatut</fullName>
        <active>false</active>
        <description>Seuls le coordinateur du projet et l&apos;assigné peuvent modifier l&apos;Action</description>
        <errorConditionFormula>NOT( $User.BypassVR__c )
&amp;&amp;
NOT(RIC_IsCoordinator__c)
&amp;&amp;
NOT(Assigned_To__r.Id =  $User.Id)
&amp;&amp;
ISCHANGED( RIC_Status__c )</errorConditionFormula>
        <errorMessage>Seul l&apos;utilisateur assigné à l&apos;Action ou le coordinateur du Projet peuvent modifier l&apos;Action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RIC_MAD_reelle</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c)
&amp;&amp;
RIC_MAD_reelle__c 
&amp;&amp;
ISBLANK(Project_Milestone__r.Project__r.RIC_MAD_Date_Real__c)
&amp;&amp;
OR(
ISPICKVAL(RIC_Status__c ,&quot;Réalisé&quot;),
ISPICKVAL(RIC_Status__c ,&quot;Réalisé - à finaliser&quot;)
)
&amp;&amp; 
ISCHANGED(RIC_Status__c)
&amp;&amp;
NOT(ISNEW())</errorConditionFormula>
        <errorDisplayField>RIC_Status__c</errorDisplayField>
        <errorMessage>Cette Action ne peut être marquée comme réalisée que lorsque la date de MAD réelle est définie dans le Projet</errorMessage>
    </validationRules>
</CustomObject>